--- a/NoticiarioAPI/Properties/launchSettings.json
+++ b/NoticiarioAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "NoticiarioAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      //"launchBrowser": true,
       //"launchUrl": "swagger",
       "applicationUrl": "https://localhost:7037;http://localhost:5197",
       "environmentVariables": {
@@ -21,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      //"launchBrowser": true,
       //"launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
