--- a/NoticiarioAPI/Properties/launchSettings.json
+++ b/NoticiarioAPI/Properties/launchSettings.json
@@ -1,4 +1,26 @@
-﻿{
+{
+  "profiles": {
+    "NoticiarioAPI": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7037;http://localhost:5197"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    }
+  },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -6,26 +28,6 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:32811",
       "sslPort": 44341
-    }
-  },
-  "profiles": {
-    "NoticiarioAPI": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      //"launchBrowser": true,
-      //"launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7037;http://localhost:5197",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      //"launchBrowser": true,
-      //"launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     }
   }
 }
