--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           push: true
           tags:
             jo4ovictor/api-noticia:v${{ github.run_number }}
-            jo4ovictor/api-noticia:latest
+            jo4ovictor/api-noticia:v1.1
