--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
           file: ./NoticiarioAPI/Dockerfile
           push: true
           tags:
-            jo4ovictor/api-noticia:v1.1
+            jo4ovictor/api-noticia:latest
