--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,15 @@ jobs:
           push: true
           tags:
             jo4ovictor/api-noticia:latest
+  CD:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Obter Código Fonte
+        uses: actions/checkout@v3.6.0
+      - name: Azure Login
+        uses: Azure/login@v1.4.6
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        
