--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
         uses: Azure/k8s-deploy@v4.9
         with:
           manifests:
-            ./k8s/pvc1.yml
-            ./k8s/sql-server-deploy.yml
-            ./k8s/api-deploy.yml
+            k8s/pvc1.yml
+            k8s/sql-server-deploy.yml
+            k8s/api-deploy.yml
           images:
             jo4ovictor/api-noticia:v${{ github.run_number }}
 
