--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,6 @@ jobs:
             k8s/sql-server-deploy.yml
             k8s/api-deploy.yml
           images: |
-            jo4ovictor/api-noticia:v${{ github.run_number }}
+            jo4ovictor/api-noticia:latest
 
             
