--- a/k8s/sql-server-deploy.yml
+++ b/k8s/sql-server-deploy.yml
@@ -41,7 +41,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 100Mi
 ---
 apiVersion: v1
 kind: Service
