--- a/k8s/pvc1.yml
+++ b/k8s/pvc1.yml
@@ -1,10 +1,22 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mssql-pvc
-spec:
-  accessModes:
+kind: StorageClass
+  apiVersion: storage.k8s.io/v1
+  metadata:
+    name: azure-disk
+  provisioner: kubernetes.io/azure-disk
+  parameters:
+    storageaccounttype: Standard_LRS
+    kind: Managed
+  ---
+  kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: mssql-data/
+    annotations:
+      volume.beta.kubernetes.io/storage-class: azure-disk
+  spec:
+    accessModes:
     - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
+    resources:
+      requests:
+        storage: 1Gi
