--- a/k8s/api-deploy.yml
+++ b/k8s/api-deploy.yml
@@ -19,7 +19,7 @@ spec:
           image: jo4ovictor/api-noticia
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 80
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -28,8 +28,8 @@ metadata:
 spec:
   selector:
     app: crud
-  type: NodePort
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 80
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
