--- a/k8s/api-deploy.yml
+++ b/k8s/api-deploy.yml
@@ -30,5 +30,6 @@ spec:
     app: crud
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 80
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
