--- a/NoticiarioAPI/appsettings.json
+++ b/NoticiarioAPI/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FarmConnection": "Data Source=mssql-service,1433;Initial Catalog=Noticia;Persist Security Info=True;User ID=SA;Password=joao360"
+    "FarmConnection": "Data Source=mssql-deployment,1433;Initial Catalog=Noticia;Persist Security Info=True;User ID=SA;Password=3jo@oVictor360"
   }
 }
 
