--- a/k8s/sql-server-deploy.yml
+++ b/k8s/sql-server-deploy.yml
@@ -30,7 +30,7 @@ spec:
         - containerPort: 1433
         env:
         - name: MSSQL_PID
-          value: "Developer"
+          value: "Express"
         - name: ACCEPT_EULA
           value: "Y"
         - name: MSSQL_SA_PASSWORD
