--- a/NoticiarioAPI/appsettings.json
+++ b/NoticiarioAPI/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FarmConnection": "Server=4.156.149.186:1433;Database=Noticia;Persist Security Info=True;User ID=SA;Password=3jo@oVictor360"
+    "FarmConnection": "Server=<ip>\\SQLEXPRESS;Database=Noticia;User=SA;Password=3jo@oVictor360"
   }
 }
 
