--- a/NoticiarioAPI/appsettings.json
+++ b/NoticiarioAPI/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FarmConnection": "Server=<ip>\\SQLEXPRESS;Database=Noticia;User=SA;Password=3jo@oVictor360"
+    "FarmConnection": "Data Source=20.88.161.106,1433;Network Library=DBMSSOCN;Initial Catalog=Noticia;User ID=sa;Password=3jo@oVictor360"
   }
 }
 
