--- a/k8s/api-deploy.yml
+++ b/k8s/api-deploy.yml
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
         - name: api-noticia-container
-          image: jo4ovictor/api-noticia:latest
+          image: jo4ovictor/api-noticia
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 80
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -30,6 +30,6 @@ spec:
     app: crud
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 80
+      port: 80
+      targetPort: 8080
   type: LoadBalancer
