--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Azure Kubernetes set context
         uses: Azure/aks-set-context@v3
         with:
-          resource-group: rg-tech-api
+          resource-group: rg-noticia
           cluster-name: techNoticia
           
       - name: Deploy to Kubernetes cluster
