--- a/k8s/sql-server-deploy.yml
+++ b/k8s/sql-server-deploy.yml
@@ -19,6 +19,13 @@ spec:
       containers:
       - name: mssql
         image: mcr.microsoft.com/mssql/server:2019-latest
+        resources:
+          requests:
+            memory: "2G"
+            cpu: "2000m"
+          limits:
+            memory: "2G"
+            cpu: "2000m"
         ports:
         - containerPort: 1433
         env:
